tests/type_errors/hard/dict_add.py
w: dict[int, int] = {2: 1, 4: 3}
z: dict[int, bool] = {1: True, 3: False}
print(w + z)
